# AI-Chatbot-SaaS

./: .env.example  .env.opensource  ATHENA_CHATBOT_INTEGRATION_GUIDE.md  CHATBOT_CONFIG.txt  COMPREHENSIVE_SYSTEM_SUMMARY.txt  FINAL_ACCURACY_TEST.py  FINAL_VERIFICATION.py  FINAL_VERIFICATION_TEST.py  GOOGLE_API_SETUP.md  QUICKSTART.md  QUICK_START_GUIDE.py  README.md  TEST_ACCURATE_ANSWERS.py  TEST_API_ACCURACY.py  TEST_API_COMPREHENSIVE.py  TEST_API_TECH.py  TEST_CHAT_API.py  TEST_COMPREHENSIVE.py  TEST_RESULTS.md  TEST_TECH_ANSWERS.py  accuracy_improvement_system.py  athena_chatbot_backend.py  athena_chatbot_backend_advanced.py  athena_chatbot_d-id_style.html  athena_chatbot_improved.html  athena_chatbot_ui.html  athena_chatbot_ui_advanced.html  athena_complete_platform.html  athena_d-id_avatar_chatbot.html  athena_enhanced.html  athena_enterprise_platform.html  athena_lms_advanced_chatbot.html  athena_lms_complete.html  athena_lms_with_d-id_chatbot.html  athena_website_with_chatbot.html  athena_white_ui.html  chatbot_working.html  check_api_generation.py  check_chromadb.py  chromadb_answers_backup.json  (+91 more)
ai_avatar_chatbot/: .env.example  README.md  check_compile_main.py  improve_training.py  package-lock.json  quick_test.py  requirements-minimal.txt  requirements.txt  run.py  setup_groq.py  start.bat  start.sh  start_enhanced.py
ai_avatar_chatbot/backend/: config.py  main_enhanced.py
ai_avatar_chatbot/backend/api/: chat_routes.py
ai_avatar_chatbot/backend/utils/: enhanced_chat_system.py  logger.py  response_truncation.py
ai_avatar_chatbot/tools/: test_stream.py
ai_avatar_chatbot/training/: README.md
backend/: .env.example  DEV_NOTES.md  README.md  app.py  main.py  requirements-dev.txt  requirements.txt  start_server.bat  start_server.py
data/: creditor_academy_qa.json  qa_knowledge_base.json  support_tickets.json
data/chroma_db/: chroma.sqlite3
data/enhanced_rag_system/: embeddings.pkl  metadata.json  qa_knowledge_base.json  vector_db.faiss
data/merged_chroma_db/: chroma.sqlite3
data/support_tickets_db/: chroma.sqlite3
frontend/: README.md  athena_clean.html  athena_complete_platform.html
frontend/partials/: footer.html
frontend/react-app/: README.md  package-lock.json  package.json
frontend/react-app/src/: App.jsx  index.css
new-chatbot-ui/: index-backup.html  index.html  package-lock.json
react-frontend/: package-lock.json  package.json
react-frontend/public/public/: index.html
react-frontend/src/: App-backup.js  App-temp.js  App.css  App.js
scripts/: setup_dev.py
src/backend/: __init__.py  config.py  main.py  main_enhanced.py
src/backend/api/: __init__.py  chat_routes.py  chat_routes_enhanced.py  chat_routes_working.py  d_id_routes.py  direct_chat_routes.py  health.py  rag_admin.py  realtime_streaming.py  speech_to_speech_routes.py  tts_stt_routes.py  websocket.py
src/backend/asr/: __init__.py  vad.py  whisper_stt.py
src/backend/avatar/: __init__.py  controller.py  d_id_api.py  d_id_integration.py
src/backend/llm/: __init__.py  answer_optimizer.py  groq_llm.py  huggingface_llm.py  llm.py  opensource_llm.py  prompt.py
src/backend/rag/: __init__.py  enhanced_retriever.py  ingest.py  retriever.py  semantic_retriever.py  simple_qa_retriever.py  vectordb.py
src/backend/tts/: __init__.py  audio_utils.py  coqui_tts.py  modern_tts.py  xtts_trainer.py  xtts_tts.py
src/backend/utils/: __init__.py  answer_utils.py  audio_buffer.py  logger.py
src/data/knowledge_base/: metadata.json  qa_documents.json
src/frontend/: .env.example  .gitignore  index.html  modern_chatbot_ui.html  package.json  premium_chatbot.html  simple_chat.html  tsconfig.json  ultra_modern_chatbot.html  vite.config.ts  working-chatbot.html
src/frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
src/frontend/src/components/: AdvancedChatbot.module.css  AdvancedChatbot.tsx  AvatarChatbot.module.css  AvatarSide.module.css  AvatarSide.tsx  ChatPanel.module.css  ChatPanel.tsx  EnhancedChatbot.module.css  EnhancedChatbot.tsx  FloatingAvatarChatbot.tsx  MessageBubble.module.css  MessageBubble.tsx  ModernChatbot.module.css  ModernChatbot.tsx  RealTimeAvatar.tsx  VideoAvatarChat.css  VideoAvatarChat.tsx
src/frontend/src/hooks/: useChatbot.ts  useStreamingChatbot.ts
src/frontend/src/pages/: AvatarChatPage.css  AvatarChatPage.tsx  ChatPage.tsx
src/frontend/src/types/: chatbot.ts
src/models/: README.md
tests/: test_suite.py
