[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-avatar-chatbot"
version = "1.0.0"
description = "Advanced AI Avatar Chatbot with Real-time TTS/STT and RAG"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "AI Avatar Chatbot Team", email = "team@aiavatar.com"},
]
maintainers = [
    {name = "AI Avatar Chatbot Team", email = "team@aiavatar.com"},
]
keywords = ["ai", "chatbot", "avatar", "tts", "stt", "rag", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications :: Chat",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    # Core web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Data processing
    "numpy>=1.26.0",
    "pandas>=2.0.0",

    # AI/ML
    "torch>=2.1.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",

    # Vector databases
    "chromadb>=0.4.0",

    # LLM providers
    "openai>=1.3.0",
    "anthropic>=0.7.0",

    # Audio processing
    "librosa>=0.10.0",
    "soundfile>=0.12.0",

    # Image processing
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",

    # Logging and monitoring
    "structlog>=23.0.0",
    "rich>=13.0.0",

    # Development and testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
    "pytest-xdist>=3.0.0",
    "locust>=2.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.22.0",
]
gpu = [
    "torch[cu118]>=2.1.0",
    "torchaudio>=2.1.0",
    "torchvision>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai-avatar-chatbot"
Documentation = "https://ai-avatar-chatbot.readthedocs.io/"
Repository = "https://github.com/yourusername/ai-avatar-chatbot.git"
Issues = "https://github.com/yourusername/ai-avatar-chatbot/issues"
Changelog = "https://github.com/yourusername/ai-avatar-chatbot/blob/main/CHANGELOG.md"

[project.scripts]
ai-avatar-chatbot = "src.backend.main:main"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml"]

# Black code formatting
[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort import sorting
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]
known_third_party = ["fastapi", "uvicorn", "torch", "transformers"]

# MyPy type checking
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "librosa.*",
    "soundfile.*",
    "cv2.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config --cov=src --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "gpu: Tests requiring GPU",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/conftest.py",
    "src/backend/main.py",  # Entry point
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\):",
    "@(abc\.)?abstractmethod",
]

# Ruff linting and formatting
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]